@@ -1,3 +1,6 @@
+2006-07-05  Jeremy Cribb <jcribb@email.unc.edu>
+	* relaxation_time.m: added printed output of relaxation times and goodness of fit.
+
 2005-12-08  Jeremy Cribb <jcribb@email.unc.edu>
 	* visc_ps.m: corrected the 'water' and 'karo' reference lines on the output plot.
 
